Added content, styling to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,15 @@
 
 {% block content%}
 
-8=========D ~ ~ ~ ~ ;) DOda
-<!-- Individual page content goes here -->
+
+<div class="homepage-content">
+    <h1><br>Study Room Directory</h1>
+    <p><br>&#x2022; Find a place to study that suits your needs.</p>
+    <p>&#x2022; View NMSU Building ammenities such as study areas, food/drinks available, and bathrooms.</p>
+    <p>&#x2022; Add information or feedback about your favorite study spot.<br><br></p>
+    <img src="https://theproductiveengineer.net/wp-content/uploads/2019/12/Canva-College-Students-Studying-Together-in-a-Library-1024x683.jpg" height="491" width="736" alt="study group">
+  </div>
+
+<!-- {<div>{name}</div>} -->
 
 {% endblock%}
