--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -3,6 +3,15 @@
 
 {% block content%}
 
-<!-- Individual page content goes here -->
+<!-- For area -->
+
+<form action="{{ url_for('add_area') }}" method="post">
+    <label for="type">Type:</label>
+    <input type="text" id="type" name="type" required>
+    <label for="count">Count:</label>
+    <input type="number" id="count" name="count" required>
+    <input type="submit" value="Add Area">
+</form>
+
 
 {% endblock%}
