--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-bs-theme="dark">
 
-
+{% with current_user = current_user %}
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,9 +39,13 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
             </li>
+            {% if current_user.is_authenticated %}
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('login') }}">Login</a>
             </li>
+            {% endif %}
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -65,5 +69,5 @@
   </div>
 </footer>
 </body>
-
+{% endwith %}
 </html>
