--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
               <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-link" href="{{ url_for('findarea') }}">Find Area</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('buildingdirectory') }}">Building Directory</a>
