--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,9 @@
               <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
             </li>
             {% if current_user.is_authenticated %}
-              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
             {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('login') }}">Login</a>
