--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Login</h1>
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="{{ url_for('login', next=request.args.get('next')) }}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
