--- a/templates/findarea.html
+++ b/templates/findarea.html
@@ -14,8 +14,8 @@
       <form action="{{url_for('find_area')}}" method="post" enctype="multipart/form-data">
         <div class="questionnaire">
           <label for="areaAttribute" class="form-label"><br>Select a study room requirement:<br></label>
-          <select class="form-select" id="areaAttributeInput" name="attribute">
-            <option selected>Choose...</option>
+          <select class="form-select" id="areaAttributeInput" name="attribute" required>
+            <option value="">Choose...</option>
             <option value="computer">Computer</option>
             <option value="single_study">Single Study Area</option>
             <option value="group_study">Group Study Area</option>
@@ -27,14 +27,13 @@
             <option value="padded_chair">Padded Chair</option>
             <option value="window">Window</option>
             <option value="near_exit">Near an Exit</option>
-            <option value="none">None</option>
           </select>
 
         </div>
         <div class="questionnaire">
           <label for="areaAttribute2" class="form-label"><br>Select another study room requirement:<br></label>
           <select class="form-select" id="areaAttributeInput2" name="attribute2">
-            <option selected>Choose...</option>
+            <option value="">Choose...</option>
             <option value="computer">Computer</option>
             <option value="single_study">Single Study Area</option>
             <option value="group_study">Group Study Area</option>
@@ -46,18 +45,16 @@
             <option value="padded_chair">Padded Chair</option>
             <option value="window">Window</option>
             <option value="near_exit">Near an Exit</option>
-            <option value="none">None</option>
           </select>
 
         </div>
         <div class="questionnaire">
           <label for="vendingMachine" class="form-label"><br>Select vending machine preference:<br></label>
           <select class="form-select" id="vendingInput" name="vending">
-            <option selected>Choose...</option>
+            <option value="">Choose...</option>
             <option value="soda">Soda</option>
             <option value="snack">Snack</option>
             <option value="energy_drink">Energy Drink</option>
-            <option value="none">None</option>
           </select>
           <br>
         </div>
