added latitude/longitude to areas

--- a/templates/areas.html
+++ b/templates/areas.html
@@ -8,6 +8,8 @@
                 <th>ID</th>
                 <th>Type</th>
                 <th>Count</th>
+                <th>Lat:</th>
+                <th>Lng:</th>
             </tr>
         </thead>
         <tbody>
@@ -16,6 +18,8 @@
                     <td>{{ area.id }}</td>
                     <td>{{ area.type }}</td>
                     <td>{{ area.count }}</td>
+                    <td>{{ area.lat }}</td>
+                    <td>{{ area.lng }}</td>
                 </tr>
             {% endfor %}
         </tbody>
