added some more modal info on click using data-id

--- a/templates/zuhl.html
+++ b/templates/zuhl.html
@@ -6,49 +6,49 @@
 
 <map name="image-map">
     <area target="_top" alt="Snack" title="Snack" href="" coords="624,128,652,151" shape="rect" data-id="snack">
-    <area target="" alt="Soda" title="Soda" href="" coords="627,154,649,174" shape="rect">
-    <area target="" alt="Energy" title="Energy" href="" coords="657,177,619,199" shape="rect">
-    <area target="" alt="single1" title="single1" href="" coords="NaN" shape="circle">
-    <area target="" alt="single2" title="single2" href="" coords="592,361,29" shape="circle">
-    <area target="" alt="single3" title="single3" href="" coords="543,261,31" shape="circle">
-    <area target="" alt="single4" title="single4" href="" coords="588,237,NaN" shape="circle">
-    <area target="" alt="single5" title="single5" href="" coords="681,231,31" shape="circle">
-    <area target="" alt="single6" title="single6" href="" coords="758,230,NaN" shape="circle">
-    <area target="" alt="single7" title="single7" href="" coords="817,220,NaN" shape="circle">
-    <area target="" alt="single8" title="single8" href="" coords="651,331,NaN" shape="circle">
-    <area target="" alt="single9" title="single9" href="" coords="652,390,30" shape="circle">
-    <area target="" alt="single10" title="single10" href="" coords="752,317,NaN" shape="circle">
-    <area target="" alt="single11" title="single11" href="" coords="784,400,31" shape="circle">
-    <area target="" alt="single12" title="single12" href="" coords="842,358,NaN" shape="circle">
-    <area target="" alt="single13" title="single13" href="" coords="895,157,NaN" shape="circle">
-    <area target="" alt="single14" title="single14" href="" coords="973,160,31" shape="circle">
-    <area target="" alt="group1" title="group1" href="" coords="980,912,NaN" shape="circle">
-    <area target="" alt="group2" title="group2" href="" coords="1272,765,NaN" shape="circle">
-    <area target="" alt="group3" title="group3" href="" coords="1432,699,41" shape="circle">
-    <area target="" alt="single15" title="single15" href="" coords="958,650,34" shape="circle">
-    <area target="" alt="single16" title="single16" href="" coords="1040,651,30" shape="circle">
-    <area target="" alt="single17" title="single17" href="" coords="961,729,27" shape="circle">
-    <area target="" alt="single18" title="single18" href="" coords="1040,746,30" shape="circle">
-    <area target="" alt="single19" title="single19" href="" coords="956,820,NaN" shape="circle">
-    <area target="" alt="single20" title="single20" href="" coords="1028,837,30" shape="circle">
-    <area target="" alt="single21" title="single21" href="" coords="1091,909,28" shape="circle">
-    <area target="" alt="single22" title="single22" href="" coords="1284,672,32" shape="circle">
-    <area target="" alt="single23" title="single23" href="" coords="1203,659,28" shape="circle">
-    <area target="" alt="single24" title="single24" href="" coords="1184,740,30" shape="circle">
+    <area target="" alt="Soda" title="Soda" href="" coords="627,154,649,174" shape="rect" data-id="soda">
+    <area target="" alt="Energy" title="Energy" href="" coords="657,177,619,199" shape="rect" data-id="Energy">
+    <area target="" alt="single1" title="single1" href="" coords="NaN" shape="circle" data-id="single">
+    <area target="" alt="single2" title="single2" href="" coords="592,361,29" shape="circle" data-id="single">
+    <area target="" alt="single3" title="single3" href="" coords="543,261,31" shape="circle" data-id="single">
+    <area target="" alt="single4" title="single4" href="" coords="588,237,NaN" shape="circle" data-id="single">
+    <area target="" alt="single5" title="single5" href="" coords="681,231,31" shape="circle" data-id="single">
+    <area target="" alt="single6" title="single6" href="" coords="758,230,NaN" shape="circle" data-id="single">
+    <area target="" alt="single7" title="single7" href="" coords="817,220,NaN" shape="circle" data-id="single">
+    <area target="" alt="single8" title="single8" href="" coords="651,331,NaN" shape="circle" data-id="single">
+    <area target="" alt="single9" title="single9" href="" coords="652,390,30" shape="circle" data-id="single">
+    <area target="" alt="single10" title="single10" href="" coords="752,317,NaN" shape="circle" data-id="single">
+    <area target="" alt="single11" title="single11" href="" coords="784,400,31" shape="circle" data-id="single">
+    <area target="" alt="single12" title="single12" href="" coords="842,358,NaN" shape="circle" data-id="single">
+    <area target="" alt="single13" title="single13" href="" coords="895,157,NaN" shape="circle"data-id="single">
+    <area target="" alt="single14" title="single14" href="" coords="973,160,31" shape="circle" data-id="single">
+    <area target="" alt="group1" title="group1" href="" coords="980,912,NaN" shape="circle" data-id="group-area">
+    <area target="" alt="group2" title="group2" href="" coords="1272,765,NaN" shape="circle" data-id="group-area">
+    <area target="" alt="group3" title="group3" href="" coords="1432,699,41" shape="circle" data-id="single">
+    <area target="" alt="single15" title="single15" href="" coords="958,650,34" shape="circle" data-id="single">
+    <area target="" alt="single16" title="single16" href="" coords="1040,651,30" shape="circle" data-id="single">
+    <area target="" alt="single17" title="single17" href="" coords="961,729,27" shape="circle"data-id="single">
+    <area target="" alt="single18" title="single18" href="" coords="1040,746,30" shape="circle" data-id="single">
+    <area target="" alt="single19" title="single19" href="" coords="956,820,NaN" shape="circle" data-id="single">
+    <area target="" alt="single20" title="single20" href="" coords="1028,837,30" shape="circle" data-id="single">
+    <area target="" alt="single21" title="single21" href="" coords="1091,909,28" shape="circle" data-id="single">
+    <area target="" alt="single22" title="single22" href="" coords="1284,672,32" shape="circle" data-id="single">
+    <area target="" alt="single23" title="single23" href="" coords="1203,659,28" shape="circle" data-id="single">
+    <area target="" alt="single24" title="single24" href="" coords="1184,740,30" shape="circle" data-id="single">
     <area target="" alt="single25" title="single25" href="" coords="NaN" shape="circle">
-    <area target="" alt="single26" title="single26" href="" coords="1199,825,31" shape="circle">
-    <area target="" alt="single27" title="single27" href="" coords="1281,864,29" shape="circle">
-    <area target="" alt="single28" title="single28" href="" coords="1380,619,37" shape="circle">
-    <area target="" alt="single29" title="single29" href="" coords="1515,614,28" shape="circle">
-    <area target="" alt="single30" title="single30" href="" coords="1420,789,28" shape="circle">
-    <area target="" alt="single31" title="single31" href="" coords="1432,872,25" shape="circle">
-    <area target="" alt="single32" title="single32" href="" coords="1497,812,NaN" shape="circle">
-    <area target="" alt="single33" title="single33" href="" coords="1512,741,29" shape="circle">
-    <area target="" alt="single34" title="single34" href="" coords="1637,857,NaN" shape="circle">
+    <area target="" alt="single26" title="single26" href="" coords="1199,825,31" shape="circle" data-id="single">
+    <area target="" alt="single27" title="single27" href="" coords="1281,864,29" shape="circle" data-id="single">
+    <area target="" alt="single28" title="single28" href="" coords="1380,619,37" shape="circle" data-id="single">
+    <area target="" alt="single29" title="single29" href="" coords="1515,614,28" shape="circle" data-id="single">
+    <area target="" alt="single30" title="single30" href="" coords="1420,789,28" shape="circle" data-id="single">
+    <area target="" alt="single31" title="single31" href="" coords="1432,872,25" shape="circle" data-id="single">
+    <area target="" alt="single32" title="single32" href="" coords="1497,812,NaN" shape="circle" data-id="single">
+    <area target="" alt="single33" title="single33" href="" coords="1512,741,29" shape="circle" data-id="single">
+    <area target="" alt="single34" title="single34" href="" coords="1637,857,NaN" shape="circle" data-id="single">
     <area target="" alt="single35" title="single35" href="" coords="NaN" shape="circle">
-    <area target="" alt="single36" title="single36" href="" coords="1649,699,28" shape="circle">
-    <area target="" alt="single37" title="single37" href="" coords="1651,628,33" shape="circle">
-    <area target="" alt="single38" title="single38" href="" coords="1652,548,28" shape="circle">
+    <area target="" alt="single36" title="single36" href="" coords="1649,699,28" shape="circle" data-id="single">
+    <area target="" alt="single37" title="single37" href="" coords="1651,628,33" shape="circle" data-id="single">
+    <area target="" alt="single38" title="single38" href="" coords="1652,548,28" shape="circle" data-id="single">
 </map>
 
 <script>
