worked on the modal, added a new table as not to interfere with the origional area table

--- a/templates/zuhl.html
+++ b/templates/zuhl.html
@@ -5,65 +5,62 @@
 <img src="/static/Zuhl_1stfloor.drawio.png" usemap="#image-map">
 
 <map name="image-map">
-    <area target="_top" alt="Snack" title="Snack" href="" coords="624,128,652,151" shape="rect" data-id="snack">
-    <area target="" alt="Soda" title="Soda" href="" coords="627,154,649,174" shape="rect" data-id="soda">
-    <area target="" alt="Energy" title="Energy" href="" coords="657,177,619,199" shape="rect" data-id="Energy">
-    <area target="" alt="single1" title="single1" href="" coords="NaN" shape="circle" data-id="single">
-    <area target="" alt="single2" title="single2" href="" coords="592,361,29" shape="circle" data-id="single">
-    <area target="" alt="single3" title="single3" href="" coords="543,261,31" shape="circle" data-id="single">
-    <area target="" alt="single4" title="single4" href="" coords="588,237,NaN" shape="circle" data-id="single">
-    <area target="" alt="single5" title="single5" href="" coords="681,231,31" shape="circle" data-id="single">
-    <area target="" alt="single6" title="single6" href="" coords="758,230,NaN" shape="circle" data-id="single">
-    <area target="" alt="single7" title="single7" href="" coords="817,220,NaN" shape="circle" data-id="single">
-    <area target="" alt="single8" title="single8" href="" coords="651,331,NaN" shape="circle" data-id="single">
-    <area target="" alt="single9" title="single9" href="" coords="652,390,30" shape="circle" data-id="single">
-    <area target="" alt="single10" title="single10" href="" coords="752,317,NaN" shape="circle" data-id="single">
-    <area target="" alt="single11" title="single11" href="" coords="784,400,31" shape="circle" data-id="single">
-    <area target="" alt="single12" title="single12" href="" coords="842,358,NaN" shape="circle" data-id="single">
-    <area target="" alt="single13" title="single13" href="" coords="895,157,NaN" shape="circle"data-id="single">
-    <area target="" alt="single14" title="single14" href="" coords="973,160,31" shape="circle" data-id="single">
-    <area target="" alt="group1" title="group1" href="" coords="980,912,NaN" shape="circle" data-id="group-area">
-    <area target="" alt="group2" title="group2" href="" coords="1272,765,NaN" shape="circle" data-id="group-area">
-    <area target="" alt="group3" title="group3" href="" coords="1432,699,41" shape="circle" data-id="single">
-    <area target="" alt="single15" title="single15" href="" coords="958,650,34" shape="circle" data-id="single">
-    <area target="" alt="single16" title="single16" href="" coords="1040,651,30" shape="circle" data-id="single">
-    <area target="" alt="single17" title="single17" href="" coords="961,729,27" shape="circle"data-id="single">
-    <area target="" alt="single18" title="single18" href="" coords="1040,746,30" shape="circle" data-id="single">
-    <area target="" alt="single19" title="single19" href="" coords="956,820,NaN" shape="circle" data-id="single">
-    <area target="" alt="single20" title="single20" href="" coords="1028,837,30" shape="circle" data-id="single">
-    <area target="" alt="single21" title="single21" href="" coords="1091,909,28" shape="circle" data-id="single">
-    <area target="" alt="single22" title="single22" href="" coords="1284,672,32" shape="circle" data-id="single">
-    <area target="" alt="single23" title="single23" href="" coords="1203,659,28" shape="circle" data-id="single">
-    <area target="" alt="single24" title="single24" href="" coords="1184,740,30" shape="circle" data-id="single">
-    <area target="" alt="single25" title="single25" href="" coords="NaN" shape="circle">
-    <area target="" alt="single26" title="single26" href="" coords="1199,825,31" shape="circle" data-id="single">
-    <area target="" alt="single27" title="single27" href="" coords="1281,864,29" shape="circle" data-id="single">
-    <area target="" alt="single28" title="single28" href="" coords="1380,619,37" shape="circle" data-id="single">
-    <area target="" alt="single29" title="single29" href="" coords="1515,614,28" shape="circle" data-id="single">
-    <area target="" alt="single30" title="single30" href="" coords="1420,789,28" shape="circle" data-id="single">
-    <area target="" alt="single31" title="single31" href="" coords="1432,872,25" shape="circle" data-id="single">
-    <area target="" alt="single32" title="single32" href="" coords="1497,812,NaN" shape="circle" data-id="single">
-    <area target="" alt="single33" title="single33" href="" coords="1512,741,29" shape="circle" data-id="single">
-    <area target="" alt="single34" title="single34" href="" coords="1637,857,NaN" shape="circle" data-id="single">
-    <area target="" alt="single35" title="single35" href="" coords="NaN" shape="circle">
-    <area target="" alt="single36" title="single36" href="" coords="1649,699,28" shape="circle" data-id="single">
-    <area target="" alt="single37" title="single37" href="" coords="1651,628,33" shape="circle" data-id="single">
-    <area target="" alt="single38" title="single38" href="" coords="1652,548,28" shape="circle" data-id="single">
+   
+<area data-id="near_exit" alt="" title="" href="javascript:void(0);" shape="rect" coords="714,72,791,128" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="snack" alt="" title="" href="javascript:void(0);" shape="rect" coords="607,112,663,151" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="soda" alt="" title="" href="javascript:void(0);" shape="rect" coords="620,153,659,174" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="energy" alt="" title="" href="javascript:void(0);" shape="rect" coords="618,177,658,201" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="entrance" alt="" title="" href="javascript:void(0);" shape="rect" coords="211,153,275,203" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="checkout" alt="" title="" href="javascript:void(0);" shape="rect" coords="112,230,196,320" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="single_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="466,261,526,317" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="single_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="592,223,652,279" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="single_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="732,211,792,267" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="group_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="964,576,1125,731" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="group_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="1093,754,1254,909" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="group_study" alt="" title="" href="javascript:void(0);" shape="rect" coords="1342,628,1503,783" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="exit" alt="" title="" href="javascript:void(0);" shape="rect" coords="1609,874,1689,951" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+<area data-id="snackbar" alt="" title="" href="javascript:void(0);" shape="rect" coords="588,787,882,945" style="outline:none;" target="_self" onclick="showPopup(this.dataset.id, this.coords)"    />
+
+  
+   
 </map>
 
+<div id="area-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="area-type"></h2>
+        <p id="area-count"></p>
+    </div>
+</div>
+
 <script>
-    document.querySelectorAll('area').forEach(area => {
-        area.addEventListener('click', function(event) {
-            event.preventDefault();
-            const itemId = event.target.dataset.id;
-            showPopup(itemId);
-        });
-    });
-    
     function showPopup(itemId) {
-        // Code to display the popup window
-        alert(`You clicked on item: ${itemId}`);
+        const dbId = itemId;
+        if (!dbId) {
+            console.error('Error: Invalid itemId');
+            return;
+        }
+
+        fetch(`/my_areas/${dbId}`)
+            .then(response => response.json())
+            .then(data => {
+                console.log('Area fetched:', data);
+                const areaType = document.getElementById('area-type');
+                const areaCount = document.getElementById('area-count');
+                areaType.textContent = data.type;
+                areaCount.textContent = `Count: ${data.count}`;
+                const modal = document.getElementById('area-modal');
+                modal.style.display = 'block';
+            })
+            .catch(error => {
+                console.error('Error fetching area:', error);
+            });
+
+        const closeModal = document.getElementsByClassName('close')[0];
+        closeModal.onclick = function() {
+            const modal = document.getElementById('area-modal');
+            modal.style.display = 'none';
+        };
     }
 </script>
-{% endblock%}
-    
+{% endblock %}
